Decided to let all the demos float left. This is more consistent and prevents text alignment bugs. Menu is fixed. Dialog demo in place. Two card demos in place. Added the mdl-card__menu component. It is a feature even though it does not have a place on the mdl options list, which is weird.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -13,7 +13,7 @@ pre {
 }
 
 .mdl-demo-container {
-  text-align: center;
+  margin: auto;
   background: #eeeeee;
   padding-top: 30px;
   padding-bottom: 30px;
